--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "pre-commit": "1.x",
     "rc-server": "3.x",
     "rc-tools": "4.x",
-    "react": "~0.14.0",
-    "react-addons-test-utils": "^0.14.0",
-    "react-dom": "~0.14.0"
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "pre-commit": [
     "lint"
@@ -52,7 +52,7 @@
   "dependencies": {
     "classnames": "^2.2.1",
     "rc-tooltip": "3.x",
-    "rc-util": "3.x",
+    "rc-util": "^3.1.3",
     "warning": "^2.1.0"
   }
 }
