--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "dependencies": {
     "classnames": "^2.2.1",
     "rc-tooltip": "3.x",
-    "rc-util": "^3.1.3",
+    "rc-util": "3.1.3",
     "warning": "^2.1.0"
   }
 }
